# HoneyEncryption

./: .gitignore  CMakeLists.txt  README.md  TODO.md  aes_module.cpp  aes_module.h  build.bat  build.sh  create_repo.ps1  dte_module.cpp  dte_module.h  fake_generator.cpp  fake_generator.h  honey_encrypt  main.cpp  mappings.txt  test_input.txt  utils.cpp  utils.h
backend/: .env  honey_encryption.db  main.py  requirements.txt
backend/api/: __init__.py  routes.py
backend/crypto/: __init__.py  fake_generator.py  honey_crypto.py
backend/database/: __init__.py  db.py  models.py
database/: schema.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/pages/: AdminDashboard.jsx  Decrypt.jsx  Encrypt.jsx  Home.jsx
frontend/src/services/: api.js
